[gd_scene load_steps=4 format=3 uid="uid://cw2x4gdmf6gv"]

[ext_resource type="Script" uid="uid://bcrfevrckuk51" path="res://Scripts/decoration.gd" id="1_ajaft"]
[ext_resource type="PackedScene" uid="uid://b3cga5t2t7txf" path="res://Objects/Decorations/gear_hole_basic.tscn" id="2_57xev"]
[ext_resource type="AnimationLibrary" uid="uid://hcdta174ln3f" path="res://Other/Animations/gear.tres" id="3_1h25j"]

[node name="gear" type="Node2D"]
script = ExtResource("1_ajaft")

[node name="gear" parent="." instance=ExtResource("2_57xev")]

[node name="gear2" parent="." instance=ExtResource("2_57xev")]
modulate = Color(0, 0, 0, 1)
z_index = -1
position = Vector2(-8, 0)

[node name="gear3" parent="." instance=ExtResource("2_57xev")]
modulate = Color(0, 0, 0, 1)
z_index = -1
position = Vector2(-8, -8)

[node name="gear4" parent="." instance=ExtResource("2_57xev")]
modulate = Color(0, 0, 0, 1)
z_index = -1
position = Vector2(0, -8)

[node name="gear5" parent="." instance=ExtResource("2_57xev")]
modulate = Color(0, 0, 0, 1)
z_index = -1
position = Vector2(8, -8)

[node name="gear6" parent="." instance=ExtResource("2_57xev")]
modulate = Color(0, 0, 0, 1)
z_index = -1
position = Vector2(8, 0)

[node name="gear7" parent="." instance=ExtResource("2_57xev")]
modulate = Color(0, 0, 0, 1)
z_index = -1
position = Vector2(8, 8)

[node name="gear8" parent="." instance=ExtResource("2_57xev")]
modulate = Color(0, 0, 0, 1)
z_index = -1
position = Vector2(0, 8)

[node name="gear9" parent="." instance=ExtResource("2_57xev")]
modulate = Color(0, 0, 0, 1)
z_index = -1
position = Vector2(-8, 8)

[node name="gear10" parent="." instance=ExtResource("2_57xev")]
modulate = Color(0, 0, 0, 1)
z_index = -1
position = Vector2(-16, 8)

[node name="gear11" parent="." instance=ExtResource("2_57xev")]
modulate = Color(0, 0, 0, 1)
z_index = -1
position = Vector2(-8, 16)

[node name="gear12" parent="." instance=ExtResource("2_57xev")]
modulate = Color(0, 0, 0, 1)
z_index = -1
position = Vector2(-16, 16)

[node name="animation_gear" type="AnimationPlayer" parent="."]
libraries = {
&"": ExtResource("3_1h25j")
}
