[gd_scene load_steps=4 format=3 uid="uid://bieh176ikqktf"]

[ext_resource type="Script" uid="uid://bcrfevrckuk51" path="res://Scripts/decoration.gd" id="1_k802y"]
[ext_resource type="Theme" uid="uid://8i27k6tj1d3o" path="res://Other/Themes/basic.tres" id="2_rnfon"]
[ext_resource type="Texture2D" uid="uid://c61ibs417d5ae" path="res://Assets/Graphics/other/glow_orb_strong.png" id="3_k802y"]

[node name="decoration_core" type="Node2D"]
texture_filter = 4
script = ExtResource("1_k802y")

[node name="debug" type="VBoxContainer" parent="."]
visible = false
z_index = 200
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -724.0
offset_right = 74.0
grow_vertical = 0
mouse_filter = 2
theme = ExtResource("2_rnfon")

[node name="debug_anim_name" type="Label" parent="debug"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "1"

[node name="debug_anim_name2" type="Label" parent="debug"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "2"

[node name="debug_is_near_edge" type="Label" parent="debug"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "2"

[node name="debug_is_near_offset_x" type="Label" parent="debug"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "2"

[node name="debug_real_pos" type="ColorRect" parent="."]
visible = false
z_index = 250
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="glow_light" type="PointLight2D" parent="."]
energy = 0.25
range_layer_max = 2
range_item_cull_mask = 2
texture = ExtResource("3_k802y")
